--- a/createACustomNetwork.yml
+++ b/createACustomNetwork.yml
@@ -4,10 +4,11 @@
 - name: Create Custom Network
   hosts: localhost
   connection: local
-  gce_net:
-    name: customnet
-    mode: custom
-    subnet_name: "customsubnet"
-    subnet_region: us-east1
-    ipv4_range: '10.240.17.0/24'
-    state: "present"
+  tasks:
+    gce_net:
+      name: customnet
+      mode: custom
+      subnet_name: "customsubnet"
+      subnet_region: us-east1
+      ipv4_range: '10.240.17.0/24'
+      state: "present"
