--- a/createACustomNetwork.yml
+++ b/createACustomNetwork.yml
@@ -9,7 +9,7 @@
       gce_net:
         name: customnet
         mode: custom
-        subnet_name: "customsubnet"
+        #subnet_name: "customsubnet"
         subnet_region: us-east1
         ipv4_range: '10.240.17.0/24'
         state: "present"
