--- a/createACustomNetwork.yml
+++ b/createACustomNetwork.yml
@@ -10,6 +10,7 @@
         name: customnet
         mode: custom
         #subnet_name: "customsubnet"
+        subnet_name: {{ tela_name }}
         subnet_region: us-east1
         ipv4_range: '10.240.17.0/24'
         state: "present"
