--- a/createACustomNetwork.yml
+++ b/createACustomNetwork.yml
@@ -1,16 +1,29 @@
 ---
 # Create a Custom Network
-
 - name: Create Custom Network
   hosts: localhost
   connection: local
   tasks:
     - name: Deploy New Customer Network
       gce_net:
-        name: customnet
-        mode: custom
-        #subnet_name: "customsubnet"
-        subnet_name: "{{ tela_name }}"
-        subnet_region: us-east1
-        ipv4_range: '10.240.17.0/24'
+        name: "{{ vpc_name }}"
+        mode: "{{ vpc_mode }}"
+        subnet_name: "{{ vpc_subnet_name }}"
+        subnet_region: "{{ region }}"
+        ipv4_range: "{{ ip_range }}"
         state: "present"
+        
+
+## Example:
+#- name: Create Custom Network
+#  hosts: localhost
+#  connection: local
+#  tasks:
+#    - name: Deploy New Customer Network
+#      gce_net:
+#        name: customnet
+#        mode: custom
+#        subnet_name: "customsubnet"
+#        subnet_region: us-east1
+#        ipv4_range: '10.240.17.0/24'
+#        state: "present"
