--- a/createACustomNetwork.yml
+++ b/createACustomNetwork.yml
@@ -10,7 +10,7 @@
         mode: "{{ vpc_mode }}"
         subnet_name: "{{ vpc_subnet_name }}"
         subnet_region: "{{ vpc_region }}"
-        ipv4_range: '10.240.17.0/24'
+        ipv4_range: "{{ vpc_ipv4_range }}"
         state: "present"
         
 
